Add KHR_draco_mesh_compression and KHR_materials_clearcoat

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,7 @@ extras = ["gltf-json/extras"]
 names = ["gltf-json/names"]
 utils = []
 import = ["base64", "image"]
+KHR_draco_mesh_compression = ["gltf-json/KHR_draco_mesh_compression"]
 KHR_lights_punctual = ["gltf-json/KHR_lights_punctual"]
 KHR_materials_pbrSpecularGlossiness = ["gltf-json/KHR_materials_pbrSpecularGlossiness"]
 KHR_materials_unlit = ["gltf-json/KHR_materials_unlit"]
@@ -49,6 +50,7 @@ KHR_materials_ior = ["gltf-json/KHR_materials_ior"]
 KHR_materials_variants = ["gltf-json/KHR_materials_variants"]
 KHR_materials_volume = ["gltf-json/KHR_materials_volume"]
 KHR_materials_specular = ["gltf-json/KHR_materials_specular"]
+KHR_materials_clearcoat = ["gltf-json/KHR_materials_clearcoat"]
 image_jpeg_rayon = ["image/jpeg_rayon"]
 guess_mime_type = []
 
