--- a/gltf-json/Cargo.toml
+++ b/gltf-json/Cargo.toml
@@ -17,7 +17,9 @@ serde_json = { features = ["raw_value"], version = "1.0" }
 default = []
 names = []
 extras = []
+KHR_draco_mesh_compression = []
 KHR_lights_punctual = []
+KHR_materials_clearcoat = []
 KHR_materials_ior = []
 KHR_materials_pbrSpecularGlossiness = []
 KHR_materials_specular = []
