--- a/gltf-json/Cargo.toml
+++ b/gltf-json/Cargo.toml
@@ -28,3 +28,4 @@ KHR_materials_unlit = []
 KHR_materials_variants = []
 KHR_materials_volume = []
 KHR_texture_transform = []
+OFT_texture_highPrecisionNormal = []
