--- a/gltf-json/Cargo.toml
+++ b/gltf-json/Cargo.toml
@@ -28,4 +28,5 @@ KHR_materials_unlit = []
 KHR_materials_variants = []
 KHR_materials_volume = []
 KHR_texture_transform = []
+OFT_materials_refractive_solid = []
 OFT_texture_highPrecisionNormal = []
